[tool.poetry]
name = "phyauth"
version = "0.1.0"
description = ""
authors = ["Rainshaw <rxg@live.com>"]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-oidc-provider = "^0.7.0"
requests = "^2.26.0"
celery = "^5.2.1"
django-celery-results = "^2.2.0"
django-celery-beat = "^2.2.1"
mysqlclient = "^2.1.0"
configparser = "^5.1.0"
django-redis = "^5.1.0"
django-bootstrap-breadcrumbs = "^0.9.2"
django-guardian = "^2.4.0"
daphne = "^3.0.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
